...
            .font(.rounded(.caption))
            .foregroundColor(.secondary)
        }
        .padding(.horizontal)

        VStack(alignment: .leading, spacing: 8) {
          Text("Overview")
            .font(.rounded(.title3, weight: .bold))
          Text(movie.overview)
            .font(.rounded(.callout))
            .foregroundColor(.secondary)
        }
        .padding(.horizontal)
...
